# rulestesting

./: .gitignore  .project-settings.yml  Arrow.hs  Auto.hs  Examples.hs  Main.hs  rulestesting.cabal  stack.yaml
Control/: CCA.hs
Control/Arrow/: CCA.hs  Init.hs  TH.hs
Control/Arrow/CCA/: Optimize.hs
Control/Arrow/Init/: Normalize.hs  Optimize.hs  TH.hs
Control/Arrow/TH/: Structural.hs
Control/CCA/: CCNF.hs  CCNF.lhs
Language/Haskell/TH/: Instances.hs  Instances1.hs  Raise.hs  Utilities.hs
src/: Examples.hs  Main.hs  Parser.hs
src/Control/Arrow/CCA/: AExp.hs  Free.hs  NoQ.hs  Rules.hs
src/Control/Arrow/Init/Optimize/: TH.hs
src/Control/Arrow/TH/: Structural.hs
src/Control/CCA/: Normalize.hs
src/Control/Categorical/Bifunctor/: Rules.hs
src/Control/Category/: Monoidal.hs  Rules.hs
src/Control/Category/Associative/: Rules.hs
src/Control/Category/Cartesian/: Rules.hs
src/Control/Category/Monoidal/: Rules.hs
src/Control/Category/Structural/: Rules.hs
src/Data/: Compos.hs
src/Morte/: Core.hs
