name:                rulestesting
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/tomberek/rulestesting#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Control.Arrow.Init,
                       Control.Arrow.Init.Optimize,
                       Control.Arrow.TH,
                       Language.Haskell.TH.Utilities
  build-depends:       base >= 4.7 && < 5
                       ,template-haskell
                       ,uniplate
                       ,containers
                       ,async
                       ,mtl
                       ,syb
                       ,haskell-src-exts
                       ,haskell-src-meta
                       ,aeson
  default-language:    Haskell2010

executable rulestesting
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rulestesting
                       ,template-haskell
                       ,uniplate
                       ,containers
                       ,async
                       ,mtl
                       ,syb
                       ,haskell-src-exts
                       ,haskell-src-meta
                       ,aeson
  default-language:    Haskell2010

